[package]
name = "test-waitlist"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "d8d59287bf8", features = ["debug"] }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
io = { path = "io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "d8d59287bf8" }
io = { path = "io" }

[dev-dependencies]
tokio = "1"
hex-literal = "0.4"
hex = { version = "0.4", default-features = false }
gear-core = { git = "https://github.com/gear-tech/gear", rev = "d8d59287bf8" }
gclient = { git = "https://github.com/gear-tech/gear", rev = "d8d59287bf8" }